--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Viagens</title> <link rel="stylesheet" href="/home/aluno/Documentos/SiteViagens---AulaWeb1-2023/CSS/indexstyle.css">
+    <title>Site Viagens</title> <link rel="stylesheet" href="CSS\indexstyle.css">
 </head>
 <body>
     <!--A tag body contém todos os elementos inseridos na página-->
@@ -25,7 +25,11 @@
             <h1>Conheça a Tailândia</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos excepturi dicta reprehenderit, officia obcaecati beatae assumenda. Ducimus, nemo optio? Suscipit?
             </p>
+            <button type="button">Saiba Mais!</button>
         </div>
+
     </header>
+
+
 </body>
 </html>
