Continuação da aula 28/03.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -30,6 +30,57 @@
 
     </header>
 
+    <section id="pacotes" class="pacotes">
+        <h1 class="pacotes-title">Conheça nossos pacotes</h1>
+        <div class="pacotes-card">
+            <div class="card">
+                <div class="card-tag card-tag-top">
+                    <p>Promoção</p>
+                </div>
+                <div class="card-tag card-tag-bottom">
+                    <p>R$ 1.500,00</p>
+                </div>
+                <img src="https://imgs.search.brave.com/JpyGjhAGtUTGTD2w63GnWCjsgcyJhc1-E3sb9Ldk4jk/rs:fit:640:408:1/g:ce/aHR0cHM6Ly9waXhp/bXVzLm5ldC9tZWRp/YS8zMTU5L25pZ2h0/bGlmZS1vZi1ob29r/ZXJzLWluLXRoYWls/YW5kLTUuanBn" alt="Vidanoturna" class="card-image">
+                <div class="card-content">
+                    <h1>Passeio Noturno</h1>
+                    <ul>
+                        <li><i></i>Diversão</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-tag card-tag-top">
+                    <p>Promoção</p>
+                </div>
+                <div class="card-tag card-tag-bottom">
+                    <p>R$ 2.500,00</p>
+                </div>
+                <img src="https://imgs.search.brave.com/i5RdJVg2VaYl_WlkTEN3WNnC7h7kuQDkFi-ecVrDALU/rs:fit:1100:570:1/g:ce/aHR0cHM6Ly93d3cu/Ym9ybmluc3BhY2Uu/Y29tL3dwLWNvbnRl/bnQvdXBsb2Fkcy8y/MDIxLzA2L2RyYWct/cmFjaW5nLXRoYWkt/cml2ZXJib2F0cy0x/MTAweDU3MC5qcGc" alt="barcos" class="card-image">
+                <div class="card-content">
+                    <h1>Passeio de Barcos</h1>
+                    <ul>
+                        <li><i></i>Emoção</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-tag card-tag-top">
+                    <p>Promoção</p>
+                </div>
+                <div class="card-tag card-tag-bottom">
+                    <p>R$ 2.000,00</p>
+                </div>
+                <img src="https://imgs.search.brave.com/xa0pmwc5oDCilhxxGdzDXiyY7n9tG__6u45OS-B-4yQ/rs:fit:1200:1097:1/g:ce/aHR0cHM6Ly93d3cu/bWVsaG9yZXNkZXN0/aW5vcy5jb20uYnIv/d3AtY29udGVudC91/cGxvYWRzLzIwMTkv/MTIvbXVsaGVyZXMt/Z2lyYWZhLWtheWFu/LWthcmVuLXRhaWxh/bmRpYS5qcGc" alt="tribos" class="card-image">
+                <div class="card-content">
+                    <h1>Tribos Locais</h1>
+                    <ul>
+                        <li><i></i>Cultura</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 </body>
 </html>
