--- a/HTML/index.html
+++ b/HTML/index.html
@@ -124,6 +124,38 @@
            
         </div>
     </section>
+    <section class="contatos">
+        <h2>Matheus Matos</h2>
+        <div class="redes">
+            <div class="redes-rede">
+                <i data-feather="mail"></i>E-Mail: matospmatheus@gmail.com
+            </div>
+            <div class="redes-rede">
+                <i data-feather="facebook"></i>
+                <h4>Facebook</h4>
+                <p>Matheus P Matos</p>
+            </div>
+            <div class="redes-rede">
+                <i data-feather="twitter"></i>
+                <h4>Twitter</h4>
+                <p>@MaTHeuS__</p>
+            </div>
+            <div class="redes-rede">
+                <i data-feather="instagram"></i>
+                <h4>Instagram</h4>
+                <p>matheusmatos__</p>
+            </div>
+            <div class="redes-rede">
+                <i data-feather="phone"></i>
+                <h4>Telefone</h4>
+                <p>45 - 99999-9999</p>
+            </div>
+        </div>
+        <h4>
+            <P>Desenvolvido por: Matheus Pereira Matos </P>
+            <i data-feather=""></i>
+        </h4>
+    </section>
 
     <script>
         feather.replace()
